# custom-mcp

./: README.md
custom-ocr/: .gitignore  README.md  pyproject.toml
custom-ocr/src/custom_ocr/: __init__.py  engine.py  models.py  server.py
custom-web-search/: .gitignore  LICENSE  README.md  pyproject.toml
custom-web-search/src/custom_web_search/: __init__.py  client.py  config.py  models.py  server.py
