[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom-ocr"
version = "1.0.0"
description = "基于 RapidOCR 的本地离线 OCR 文字识别 MCP 服务"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "custom-mcp" },
]
keywords = ["mcp", "ocr", "rapidocr", "text-recognition", "claude", "ai"]
dependencies = [
    "mcp>=1.0.0",
    "rapidocr-onnxruntime>=1.3.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ljhsds-hh/custom-mcp"

[project.scripts]
custom-ocr = "custom_ocr:main"

[tool.hatch.build.targets.wheel]
packages = ["src/custom_ocr"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
